@@ -35,6 +35,9 @@ For notes on 1.38.x and older releases, see HISTORY.
 * $wgCopyUploadAllowOnWikiDomainConfig – Configures if administrators can use
   the MediaWiki:Copyupload-allowed-domains system message to define which
   domains can be used with the upload-by-url tool.
+* $wgCdnMatchParameterOrder can be set to false if MediaWiki is behind a CDN
+  that re-orders query parameters. This will make the code that matches request
+  URLs to canonical CDN URLs insensitive to parameter order.
 * …
 
 ==== Changed configuration ====
